--- a/src/pages/SignIn/styles.module.scss
+++ b/src/pages/SignIn/styles.module.scss
@@ -1,7 +1,4 @@
-import styled from 'styled-components';
-
-
-export const Container = styled.div`
+.container {
   width: 100vw;
   height: 100vh;
   color: #000;
@@ -9,35 +6,34 @@ export const Container = styled.div`
   flex-direction: column;
   justify-content: center;
   align-items: center;
-`;
+}
 
-export const Image = styled.img`
+.image {
   height: 100px;
   margin-top: -50px;
   margin-bottom: 30px;
-  
-  @media screen and (max-width: 950px) {
-    
-  }
-`;
 
-export const LoginContainer = styled.div`
+  @media screen and (max-width: 950px) {
+  }
+}
+
+.loginContainer {
   width: 400px;
-  height: 400px;
+  min-height: 400px;
   background-color: #f5f5f5;
   padding: 20px;
-  -webkit-box-shadow: 4px 8px 11px -3px rgba(0,0,0,0.31); 
-  box-shadow: 4px 8px 11px -3px rgba(0,0,0,0.31);
+  -webkit-box-shadow: 4px 8px 11px -3px rgba(0, 0, 0, 0.31);
+  box-shadow: 4px 8px 11px -3px rgba(0, 0, 0, 0.31);
 
-  h2 {
+  & h2 {
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 35px;
   }
-`;
+}
 
-export const Form = styled.form`
-  input {
+.form {
+  &_input {
     width: 100%;
     height: 50px;
     padding: 0 20px;
@@ -45,17 +41,21 @@ export const Form = styled.form`
     border-color: transparent;
     background: #fff;
     font-size: 18px;
-
-    &:focus {
-      border: red;
-    }
   }
-
-  input + input {
+  & span {
+    color: red;
+    display: inline-block;
+    font-size: 16px;
+    margin: 10px 0;
+    padding: 15px 20px;
+    width: 100%;
+    border-radius: 5px;
+    background-color: #ffdfd4;
+  }
+  & input + input {
     margin-top: 30px;
   }
-
-  button {
+  & button {
     margin-top: 30px;
     height: 50px;
     width: 100%;
@@ -68,9 +68,8 @@ export const Form = styled.form`
     &:hover {
       filter: brightness(0.9);
     }
-
     &:active {
       filter: brightness(0.7);
     }
   }
-`;
+}
