--- a/src/pages/Teacher/AddTeacher/styles.scss
+++ b/src/pages/Teacher/AddTeacher/styles.scss
@@ -20,7 +20,7 @@
     padding: 2px 8px;
     min-height: 38px;
     transition: all 100ms;
-
+    margin-bottom: 8px;
     &:focus {
       outline-color: #2684ff;
     }
