--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,5 +7,33 @@
 body {
   font-family: Helvetica, sans-serif;
   font-size: 16px;
-  color: #e1e1e6;
+  color: #000;
+}
+
+.ReactModal__Body--open {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.modal-content {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  border: 1px solid #ccc;
+  background: #fff;
+  overflow: auto;
+  outline: none;
 }
